# Nimbus-Engine

./: .gitignore  LICENSE.txt  Nimbus.sln  README.md
Engine/: Engine.vcxproj
NimbusEditor/: App.xaml  App.xaml.cs  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindow.xaml  MainWindow.xaml.cs  NimbusEditor.csproj  main.cpp
NimbusEditor/Common/: ViewModelBase.cs
NimbusEditor/GameProject/: NewProject.cs  NewProjectView.xaml  NewProjectView.xaml.cs  OpenProject.cs  OpenProjectView.xaml  OpenProjectView.xaml.cs  Project.cs  ProjectBrowserDialog.xaml  ProjectBrowserDialog.xaml.cs  Scene.cs
NimbusEditor/ProjectTemplates/EmptyProject/: template.xml
NimbusEditor/ProjectTemplates/FirstPersonProject/: template.xml
NimbusEditor/ProjectTemplates/ThirdPersonProject/: template.xml
NimbusEditor/ProjectTemplates/TopDownProject/: project.nimbus  template.xml
NimbusEditor/Utilities/: Serializer.cs
